# LangManager

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
packaging/arch/: PKGBUILD
packaging/linux/: langmanager.desktop  phpmanager.desktop
scripts/: langmanager  phpmanager
src/: ArchiveExtractor.cpp  ArchiveExtractor.h  BuildArtifactCleaner.cpp  BuildArtifactCleaner.h  BuildCatalog.cpp  BuildCatalog.h  CommandRunner.cpp  CommandRunner.h  FileDownloader.cpp  FileDownloader.h  GoDefaultSwitcher.cpp  GoDefaultSwitcher.h  GoInstallController.cpp  GoInstallController.h  GoVersionCatalog.cpp  GoVersionCatalog.h  MainWindow.cpp  MainWindow.h  PhpBuildController.cpp  PhpBuildController.h  PhpBuildEnvironment.cpp  PhpBuildEnvironment.h  PhpDefaultSwitcher.cpp  PhpDefaultSwitcher.h  PhpIniRepair.cpp  PhpIniRepair.h  PhpToolInstaller.cpp  PhpToolInstaller.h  PhpVersionCatalog.cpp  PhpVersionCatalog.h  ShellPathHelper.cpp  ShellPathHelper.h  main.cpp
